[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "movielens-recommender"
version = "0.1.0"
description = "Collaborative filtering pipeline for movie recommendations using MovieLens 32M"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16.0",
    "scikit-learn>=1.4",
    "scikit-surprise>=1.1",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "notebook>=7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
